Bug 1909374 - Register BrowserParent with CPM before calling Bind, r=smaug a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D217577